[tool.poetry]
name = "chime"
version = "0.5.2"
license = "MIT"
description = "Python sound notifications made easy."
authors = ["Max Halford <maxhalford25@gmail.com>"]
readme = "README.md"
keywords = ["notifications", "sound", "wav"]
repository = "https://github.com/MaxHalford/chime"
homepage = "https://github.com/MaxHalford/chime"
include = ["themes/*/*.wav"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
streamlit = "^0.69"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chime = "chime:main"
